Edits to css to stop the tabs looking odd in chrome when zoomed in too much

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -55,7 +55,6 @@ a
 .title
     float: left
     font-size: 500%
-    height: 90%
     
 .bigbutton
     font-size: 24px
@@ -86,12 +85,10 @@ a
     text-decoration: underline
     
 #loginbar
-    height: 50px;
     float: right
     padding: 20px 0
 
 #logoutbar
-    height: 50px
     float: right
     padding: 20px 0
 	
